# markolab-cli

./: pyproject.toml
src/markolab-cli/: cli.py
src/markolab_cli/: __init__.py  cli.py  io.py
