[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markolab-cli"
requires-python = ">=3.7"
version = "0.0.1"
description = "A package for processing 2d and 3d videos"
dependencies = [
	"click"
]


# [tool.setuptools.packages.find]
# where = ["src"]


