[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markolab_cli"
requires-python = ">=3.7"
version = "0.0.1"
description = "Markolab command line utilities"
dependencies = [
	"click",
	"tqdm"
]

[project.scripts]
markolab-cli = "markolab_cli.cli:cli"


# [tool.setuptools.packages.find]
# where = ["src"]


